# pg2sqlite

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  Cargo.toml  Readme.md
.github/workflows/: build-mac.yml  build-ubuntu.yml  build-windows.yml
src/: main.rs
