[package]
name = "pg2sqlite"
version = "0.1.1"
authors = ["d.molodtsov <dma198@yandex.ru>"]

[dependencies]
colored = "1.6"
clap = "2.3"
zip = "0.5.5"
chrono="0.4"

[dependencies.rusqlite]
version = "0.23.1"
features = ["bundled","chrono"]

[dependencies.postgres]
version="0.15"
features = ["with-chrono"]



